init toggle theme

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="backgroung-image">
+  <body class="background-image bg-white-800">
     <app-root></app-root>
   </body>
 </html>
