landing page always light theme

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -20,7 +20,7 @@
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#f4f4f4" />
   </head>
-  <body class="background-image">
+  <body>
     <app-root></app-root>
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
