compiler options unreachable code index meta values

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,13 +3,28 @@
   <head>
     <meta charset="utf-8" />
     <title>Mesta</title>
+    <meta name="lang" content="es-ES" />
+    <meta name="author" content="Ángela Redondo" />
+    <meta
+      name="description"
+      content="Mesta: herramienta para la formulación de productos"
+    />
+    <meta
+      name="keywords"
+      content="mesta formulacion formulation formular producto producto final formulación formulaciones componente componentes propiedades propiedad composición composiciones composiciones"
+    />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/icons/icon-192x192.png"
+    />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Mesta">
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta name="apple-mobile-web-app-title" content="Mesta" />
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
