--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -26,12 +26,12 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Mesta" />
     <link rel="stylesheet" href="assets/css/animate.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link
       href="https://fonts.googleapis.com/css2?family=Monoton&amp;family=Open+Sans&amp;display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#f4f4f4" />
   </head>
